--- a/src/app/file-browser/file-browser.component.html
+++ b/src/app/file-browser/file-browser.component.html
@@ -13,14 +13,14 @@
 </span>
 
 <!-- Table of Childs -->
-<table mdbTable>
-    <thead>
+<table class="table table-striped table-hover table-sm">
+    <thead class="thead-dark">
       <tr>
         <!-- <th>ID</th> -->
-        <th>Name</th>
-        <th>Type</th>
-        <th>Modified At</th>
-        <th>Size</th>
+        <th scope="col">Name</th>
+        <th scope="col">Type</th>
+        <th scope="col">Modified At</th>
+        <th scope="col"> Size</th>
       </tr>
     </thead>
     <tbody>
